force-app/main/default/objects/Except__c/Except__c.object-meta.xml
<CustomObject>
    <description>Demandes &quot;exceptionnelles&quot; (produits qui ne sont pas au tarif ou dont une ou plusieurs caractéristiques du produits ne sont pas au tarif ) du réseau au Marketing. Gestion par workflow de validation et collecte exhaustive des données de suivi, analyse, contrôle.</description>
    <label>Demande Except</label>
    <nameField>
        <displayFormat>DHT/{YYYY}/{000000}</displayFormat>
        <label>Numéro de Demande Except</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demandes Excepts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>