force-app/main/default/objects/Except__c/fields/AccordMarket__c.field-meta.xml
<CustomField>
    <fullName>AccordMarket__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accord Marketing</label>
    <type>Checkbox</type>
</CustomField>