force-app/main/default/objects/Except__c/fields/AccordTech__c.field-meta.xml
<CustomField>
    <fullName>AccordTech__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accord technique service</label>
    <type>Checkbox</type>
</CustomField>