force-app/main/default/objects/Except__c/fields/AccordVente__c.field-meta.xml
<CustomField>
    <fullName>AccordVente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accord vente</label>
    <type>Checkbox</type>
</CustomField>