force-app/main/default/objects/Except__c/fields/Demandeur__c.field-meta.xml
<CustomField>
    <fullName>Demandeur__c</fullName>
    <formula>CreatedBy.FirstName &amp; &quot; &quot; &amp;  CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Demandeur</label>
    <type>Text</type>
</CustomField>