force-app/main/default/objects/Except__c/fields/DevisAssocie__c.field-meta.xml
<CustomField>
    <fullName>DevisAssocie__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Devis associé</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Demandes Excepts</relationshipLabel>
    <relationshipName>Demandes_Excepts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>