force-app/main/default/objects/Except__c/fields/DevisDeReference__c.field-meta.xml
<CustomField>
    <fullName>DevisDeReference__c</fullName>
    <formula>DevisAssocie__r.QuoteNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Devis de référence</label>
    <type>Text</type>
</CustomField>