force-app/main/default/objects/Except__c/fields/LibelleDepot__c.field-meta.xml
<CustomField>
    <fullName>LibelleDepot__c</fullName>
    <formula>DevisAssocie__r.Opportunity.chantier__r.libelleDepotReference__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dépôt</label>
    <type>Text</type>
</CustomField>