force-app/main/default/objects/Except__c/fields/LibelleDR__c.field-meta.xml
<CustomField>
    <fullName>LibelleDR__c</fullName>
    <formula>DevisAssocie__r.Opportunity.chantier__r.libelleRegionReference__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Région</label>
    <type>Text</type>
</CustomField>