force-app/main/default/objects/Except__c/fields/LibelleDV__c.field-meta.xml
<CustomField>
    <fullName>LibelleDV__c</fullName>
    <formula>DevisAssocie__r.Opportunity.chantier__r.libelleDVReference__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DV</label>
    <type>Text</type>
</CustomField>