force-app/main/default/objects/Except__c/fields/LibelleMagasin__c.field-meta.xml
<CustomField>
    <fullName>LibelleMagasin__c</fullName>
    <formula>DevisAssocie__r.Opportunity.chantier__r.libelleMagasinReference__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Magasin</label>
    <type>Text</type>
</CustomField>