force-app/main/default/objects/Except__c/fields/NbMenuiseries__c.field-meta.xml
<CustomField>
    <fullName>NbMenuiseries__c</fullName>
    <label>Nombre de menuiseries au contrat</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>