force-app/main/default/objects/Except__c/fields/NumContrat__c.field-meta.xml
<CustomField>
    <fullName>NumContrat__c</fullName>
    <formula>DevisAssocie__r.Contract.ContractNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numéro de contrat</label>
    <type>Text</type>
</CustomField>