force-app/main/default/objects/Except__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <defaultValue>&quot;En cours de création&quot;</defaultValue>
    <label>Statut</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En cours de création</fullName>
                <default>true</default>
                <label>En cours de création</label>
            </value>
            <value>
                <fullName>En attente d&apos;approbation</fullName>
            </value>
            <value>
                <fullName>En attente de validation Market</fullName>
            </value>
            <value>
                <fullName>Acceptée</fullName>
            </value>
            <value>
                <fullName>Refusée</fullName>
            </value>
            <value>
                <fullName>En attente de validation DV</fullName>
                <isActive>false</isActive>
                <label>En attente de validation DV</label>
            </value>
            <value>
                <fullName>En attente de validation RS</fullName>
                <isActive>false</isActive>
                <label>En attente de validation RS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>