force-app/main/default/objects/Except__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Statut__c</columns>
    <columns>LibelleMagasin__c</columns>
    <columns>DevisAssocie__c</columns>
    <columns>DevisDeReference__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>fr</language>
</ListView>